@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-06-03 11:58:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-74
+
+    Summary:
+      gettext, PO handler serializes the messages ordered
+    Revision:
+      itools--main--0.9--patch-74
+
+
+    modified files:
+     Changelog gettext/PO.py i18n/igettext.py
+
+
 2005-06-03 11:56:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-73
 
     Summary:
